# csvcomparer

./: .gitignore  README.md  comparison-report.html  setup.cfg
csvcomparer/: compare.py  main.py  report.py  validate.py
data/: baseline_dhis_stats.csv  dhis_stats.csv  previous_dhis_stats.csv
templates/: comparison-template.html
