[metadata]
name = csvcomparer
version = 0.0.1
description = Compare CSV files and output results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhis2-sre/csvcomparer
author = Rado Ivanov
author_email = radoslav@dhis2.org

[options]
packages = find:
install_requires =
    pandas>=1.3.4
    jinja2>=3.0.3
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    csvcomparer = csvcomparer.main:main
